# hotel-booking-api

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
bookings/: admin.py  api.py  models.py  serializers.py  tests.py  urls.py  views.py
bookings/migrations/: 0001_initial.py
hotel_booking/: config.py  settings.py  urls.py
rooms/: admin.py  api.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_remove_room_price_per_night_room_price_and_more.py
src/hotel_booking/: settings.py  urls.py
tests/: conftest.py  test_bookings.py  test_rooms.py
