[tool.poetry]
name = "hotel-booking-service"
version = "0.1.0"
description = "Hotel Booking Service"
authors = ["Kirill"]
readme = "README.md"
package-mode = false  # ← Вот сюда!

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.6"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.10"
django-extensions = "^4.1"
gunicorn = "^23.0.0"
dj-database-url = "^3.0.1"
pydantic-settings = "^2.11.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.hotel_booking.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-django = "^4.11.1"
ruff = "^0.13.2"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
